- Automatic disconnection during specified times of the day.
- If storage opening fails the first time for some reason, Kore will try again.
- The bot will now look at NPCs when it is talking to them, like a real player.
- When you issue a "move" command, this will clear previous move actions.
- When the amount of zeny you have changes, you will be told.

mon_control.txt:
- mon_control.txt has gained more features. The new syntax is:
  (monster name) (attack) (teleport) (search) (skillcancel) (lv) (joblv) (hp) (sp)

- (attack-auto):
  You can now mark a monster as "always aggressive". This means that, 
  if a certain monster is on screen, Kore will always attack it, even
  when Kore is sitting and the monster isn't attacking you.
  In mon_control.txt, set the (attack_auto) flag to 2.
  Example:
  Skeleton Soldier 2 0 0 0
- (level):
  You can configure Kore to only attack a monster, if your base level is high
  enough. Example:
  Sohee 1 0 0 50
  Only attack Sohee if your are lv 50 or higher.

items_control.txt:
- items_control.txt now has ability to automatically get items from cart
  The new syntax is:
  (item name) (minimum in inventory) (autostore) (autosell) [put in cart] [get from cart]
  So to automatically keep 10 Meat in inventory from cart:
  Meat 10 0 0 0 1

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.
- switchconf (file)
  Switch to another configuration file.

New config options:
- attackMaxDistance (number)
  You should set it to 2.5
- useSelf_skill, partySkill and useSelf_item now also support the 'monsters' option.
- New partySkill options:
  * target_aggressives
    Only activate partySkill if a certain monster attacks a party member.
  * target_isJob
  * target_isNotJob
    Only activate partySkill for certain job classes

- attackComboSlot {
     ...everything that attackSkillSlot supports is also supported here...
     afterSkill (skill name)